解决了一些bug

--- a/ProjectManagementSystem/Views/Account/Index.cshtml
+++ b/ProjectManagementSystem/Views/Account/Index.cshtml
@@ -13,9 +13,9 @@
                 <div class="card">
                     <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
-                        <img src="~/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+                        <img src="@((await userManager.GetUserAsync(User)).ImagePath)" alt="无头像" class="rounded-circle">
                         <h2>@User.Identity.Name</h2>
-                        <h3>Web Designer</h3>
+                        <h3>@((await userManager.GetUserAsync(User)).Job)</h3>
                     </div>
                 </div>
 
@@ -88,15 +88,14 @@
                             <div class="tab-pane fade show @((Model.SelectedTab == "profile-edit") ? "active" : "")" id="profile-edit">
 
                                 <!-- Profile Edit Form -->
-                                <form method="post" asp-action="EditDetail">
+                                <form method="post" enctype="multipart/form-data" asp-action="EditDetail">
                                     <input asp-for="@Model.ApplicationUser.Id" value="@Model.ApplicationUser.Id" hidden>
                                     <div class="row mb-3">
-                                        <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
+                                        <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">头像</label>
                                         <div class="col-md-8 col-lg-9">
-                                            <img src="~/assets/img/profile-img.jpg" alt="Profile">
+                                            <img id="output" src="@Model.ApplicationUser.ImagePath" style="width:50px;height:80px;" alt="Profile">
                                             <div class="pt-2">
-                                                <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="bi bi-upload"></i></a>
-                                                <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="bi bi-trash"></i></a>
+                                                <input asp-for="@Model.Image" class="form-control" type="file" onchange="loadFile(event)" />
                                             </div>
                                         </div>
                                     </div>
@@ -149,7 +148,7 @@
                                     <div class="row mb-3">
                                         <label asp-for="@Model.ApplicationUser.Department" class="col-md-4 col-lg-3 col-form-label"></label>
                                         <div class="col-md-8 col-lg-9">
-                                            <input asp-for="@Model.ApplicationUser.Department" type="text" class="form-control" id="Job">
+                                            <input asp-for="@Model.ApplicationUser.Department" type="text" class="form-control" id="Job" readonly>
                                             <span class="invalid" asp-validation-for="@Model.ApplicationUser.Department"></span>
                                         </div>
                                     </div>
@@ -157,7 +156,7 @@
                                     <div class="row mb-3">
                                         <label asp-for="@Model.ApplicationUser.Job" class="col-md-4 col-lg-3 col-form-label"></label>
                                         <div class="col-md-8 col-lg-9">
-                                            <input asp-for="@Model.ApplicationUser.Job" type="text" class="form-control" id="Country">
+                                            <input asp-for="@Model.ApplicationUser.Job" type="text" class="form-control" id="Country" readonly>
                                             <span class="invalid" asp-validation-for="@Model.ApplicationUser.Job"></span>
                                         </div>
                                     </div>
@@ -179,7 +178,7 @@
                                     <div class="row mb-3">
                                         <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">当前密码</label>
                                         <div class="col-md-8 col-lg-9">
-                                            <input asp-for="@Model.OldPassword" type="password" class="form-control">
+                                            <input asp-for="@Model.OldPassword" type="password" class="form-control" required>
                                             <span class="invalid" asp-validation-for="@Model.OldPassword"></span>
                                         </div>
                                     </div>
@@ -187,7 +186,7 @@
                                     <div class="row mb-3">
                                         <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">新密码</label>
                                         <div class="col-md-8 col-lg-9">
-                                            <input asp-for="@Model.NewPassword" type="password" class="form-control">
+                                            <input asp-for="@Model.NewPassword" type="password" class="form-control" required>
                                             <span class="invalid" asp-validation-for="@Model.NewPassword"></span>
                                         </div>
                                     </div>
@@ -195,7 +194,7 @@
                                     </div>
 
                                     <div class="text-center">
-                                        <button type="submit" class="btn btn-primary">Change Password</button>
+                                        <button type="submit" class="btn btn-primary">更换密码</button>
                                     </div>
                                 </form><!-- End Change Password Form -->
 
@@ -211,17 +210,15 @@
     </section>
 
 </main><!-- End #main -->
-@section Scripts {
-    @*	<script>
-		$(function () {
-			// 获取需要选中的选项卡id
-			var selectedTabId = '@Model.SelectedTab';
-
-			// 选中指定的选项卡
-			if (selectedTabId) {
-				$('a[href="#' + selectedTabId + '"]').tab('show');
-			}
-		});
-	</script>*@
-
-											}
+@section Scripts{
+    <script>
+        var loadFile = function (event) {
+            var output = document.getElementById('output');
+            var reader = new FileReader();
+            reader.onload = function () {
+                output.src = reader.result;
+            };
+            reader.readAsDataURL(event.target.files[0]);
+        };
+    </script>
+}
