--- a/ProjectManagementSystem/Views/Account/Login.cshtml
+++ b/ProjectManagementSystem/Views/Account/Login.cshtml
@@ -67,15 +67,15 @@
                                         <div class="col-12">
                                             <label for="yourUsername" class="form-label">用户名</label>
                                             <input asp-for="UserName" type="text" name="username" class="form-control" id="yourUsername"
-                                                   required="">
+                                                   required>
                                             <div class="invalid-feedback">请输入用户名！</div>
                                         </div>
 
                                         <div class="col-12">
                                             <label for="yourPassword" class="form-label">密码</label>
                                             <input asp-for="Password" type="password" name="password" class="form-control"
-                                                   id="yourPassword" required="">
-                                            <div class="invalid-feedback">Please enter your password!</div>
+                                                   id="yourPassword" required>
+                                            <div class="invalid-feedback">请输入密码</div>
                                         </div>
 
                                         <div class="col-12">
