--- a/ProjectManagementSystem/Views/User/EditUser.cshtml
+++ b/ProjectManagementSystem/Views/User/EditUser.cshtml
@@ -3,71 +3,112 @@
 @using ProjectManagementSystem.Data
 @model UserEditViewModel
 @inject RoleManager<IdentityRole<int>> roleManager;
+@inject ApplicationDbContext applicationDbContext;
 @{
     ViewBag.Title = "编辑用户";
 }
 
 <h2>@ViewBag.Title</h2>
 
-<form method="post" asp-action="EditUser">
-    <div class="col-lg-6 offset-3">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">编辑用户</h5>
+<div class="col-lg-6 offset-3">
 
-                <!-- General Form Elements -->
-                <form>
-                    <input asp-for="Id" value="@Model.Id" hidden>
-                    <div class="form-floating mb-3">
-                        <input asp-for="TrueName" class="form-control" id="floatingInput" placeholder=" " value="@Model.TrueName">
-                        <label asp-for="TrueName"></label>
-                        <span class="invalid" asp-validation-for="TrueName"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <textarea asp-for="About" class="form-control" placeholder="说点什么吧" style="height: 100px;" value="@Model.About"></textarea>
-                        <label asp-for="About"></label>
-                        <span class="invalid" asp-validation-for="About"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Department" class="form-control" id="floatingInput" placeholder=" " value="@Model.Department">
-                        <label asp-for="Department"></label>
-                        <span class="invalid" asp-validation-for="Department"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Job" class="form-control" id="floatingInput" placeholder=" " value="@Model.Job">
-                        <label asp-for="Job"></label>
-                        <span class="invalid" asp-validation-for="Job"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Address" class="form-control" id="floatingInput" placeholder=" " value="@Model.Address">
-                        <label asp-for="Address"></label>
-                        <span class="invalid" asp-validation-for="Address"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="JobDate" class="form-control" value="@Model.JobDate.ToString("yyyy-MM-dd")" id="floatingInput" placeholder=" ">
-                        <label asp-for="JobDate"></label>
-                        <span class="invalid" asp-validation-for="JobDate"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="BirthDate" class="form-control" value="@Model.BirthDate.ToString("yyyy-MM-dd")" id="floatingInput" placeholder=" ">
-                        <label asp-for="BirthDate"></label>
-                        <span class="invalid" asp-validation-for="BirthDate"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <select asp-for="RoleName" class="form-select" value="@Model.RoleName" aria-label="Floating label select example" placeholder=" ">
-                            @foreach (var role in roleManager.Roles.Select(a => a.Name))
-                            {
-                                <option value="@role">@role</option>
-                            }
-                        </select>
-                        <label asp-for="RoleName"></label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">保存</button>
-                    <a asp-action="Index" class="btn btn-secondary">返回列表</a>
-                </form><!-- End General Form Elements -->
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">添加用户</h5>
 
-            </div>
+            <!-- General Form Elements -->
+            <form method="post" enctype="multipart/form-data" asp-action="EditUser" class="needs-validation" novalidate="">
+
+
+                <div class="row">
+                    <div class="col-2" style="display: flex; align-items: center;">
+                        <label>头像:</label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="@Model.Image" class="form-control" type="file" onchange="loadFile(event)" />
+                    </div>
+                    <div class="col-2" style="display: flex; align-items: center;">
+                        <img id="output" src="@Model.ImagePath" alt="无头像" width="50" height="50" style="border-radius: 50%;  margin-left: 10px;" />
+                    </div>
+                </div>
+
+
+                <br />
+
+
+                <div class="form-floating mb-3">
+                    <input asp-for="UserName" class="form-control" required="">
+                    <label asp-for="UserName"></label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input asp-for="TrueName" class="form-control" required="">
+                    <label asp-for="TrueName"></label>
+                    <span class="invalid" asp-validation-for="TrueName"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <textarea asp-for="About" class="form-control" style="height: 100px;"></textarea>
+                    <label asp-for="About"></label>
+                    <span class="invalid" asp-validation-for="About"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <select asp-for="Department" asp-items="@new SelectList(applicationDbContext.Departments.Select(d=>d.Name).ToList())" class="form-control" required></select>
+                    <label asp-for="Department"></label>
+                    <span class="invalid" asp-validation-for="Department"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <select asp-for="Job" asp-items="@new SelectList(applicationDbContext.Positions.Select(d=>d.Name).ToList())" class="form-control" required></select>
+                    <label asp-for="Job"></label>
+                    <span class="invalid" asp-validation-for="Job"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <input asp-for="Address" class="form-control" placeholder=" ">
+                    <label asp-for="Address"></label>
+                    <span class="invalid" asp-validation-for="Address"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <input asp-for="JobDate" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-dd")" placeholder=" ">
+                    <label asp-for="JobDate"></label>
+                    <span class="invalid" asp-validation-for="JobDate"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <input asp-for="BirthDate" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-dd")" placeholder=" ">
+                    <label asp-for="BirthDate"></label>
+                    <span class="invalid" asp-validation-for="BirthDate"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <select asp-for="RoleName" class="form-select" aria-label="Floating label select example" required>
+                        @foreach (var role in roleManager.Roles.Select(a => a.Name))
+                        {
+                            <option value="@role">@role</option>
+                        }
+                    </select>
+                    <label asp-for="RoleName"></label>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <button type="submit" class="btn btn-primary form-control">提交</button>
+                    </div>
+                    <div class="col">
+                        <a asp-action="Index" class="btn btn-secondary form-control">返回列表</a>
+                    </div>
+                </div>
+
+            </form><!-- End General Form Elements -->
+
         </div>
-
     </div>
-</form>
+
+</div>
+
+@section Scripts{
+    <script>
+        var loadFile = function (event) {
+            var output = document.getElementById('output');
+            var reader = new FileReader();
+            reader.onload = function () {
+                output.src = reader.result;
+            };
+            reader.readAsDataURL(event.target.files[0]);
+        };
+    </script>
+}
