--- a/ProjectManagementSystem/Views/User/Index.cshtml
+++ b/ProjectManagementSystem/Views/User/Index.cshtml
@@ -22,33 +22,37 @@
                         <thead>
                             <tr>
                                 <th scope="col">用户名</th>
+                                <th scope="col">头像</th>
                                 <th scope="col">姓名</th>
                                 <th scope="col">部门</th>
                                 <th scope="col">职位</th>
                                 <th scope="col">角色</th>
-                                <th scope="col">年龄</th>
-                                <th scope="col">工龄</th>
                                 <th scope="col">操作</th>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var user in Model)
                             {
-                                    var u = await userManager.FindByNameAsync(user.UserName);
-                                    var roleNames = await userManager.GetRolesAsync(u);
+                                var u = await userManager.FindByNameAsync(user.UserName);
+                                var roleNames = await userManager.GetRolesAsync(u);
                                 var roleName = roleNames == null || roleNames.Count() == 0 ? "" : roleNames.First();
                                 <tr>
                                     <td>@user.UserName</td>
+                                    <td>
+                                        <img src="@user.ImagePath" alt="无头像" width="50" height="50" style="border-radius: 50%;" />
+                                    </td>
                                     <td>@user.TrueName</td>
                                     <td>@user.Department</td>
                                     <td>@user.Job</td>
                                     <td>@roleName</td>
-                                    <td>@user.Age</td>
-                                    <td>@user.JobYear</td>
                                     <td>
                                         <row>
                                             <a asp-action="EditUser" asp-route-id="@user.Id" class="btn btn-outline-primary">编辑</a>
-                                            <a asp-action="DeleteUser" asp-route-id="@user.Id" class="btn btn-outline-danger">删除</a>
+                                            @if (user.CanDelete)
+                                            {
+                                                <a asp-action="DeleteUser" asp-route-id="@user.Id" class="btn btn-outline-danger">删除</a>
+                                            }
+
                                         </row>
                                 </tr>
                             }
