--- a/ProjectManagementSystem/Views/Shared/_Layout.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_Layout.cshtml
@@ -174,6 +174,7 @@
     }
 
     @{
+        string[] homeRoutes = { "Home" };
         string[] userRoutes = { "User", "Role" };
         string[] projectRoutes = { "Project", "Risk", "Defect", "Book", "Resource" };
         string[] otherRoutes = { "Department", "Position" };
@@ -181,6 +182,33 @@
 
     <aside id="sidebar" class="sidebar">
         <ul class="sidebar-nav" id="sidebar-nav">
+            <li class="nav-item @(homeRoutes.Contains(activeController) ? "active" : "")">
+                <a class="nav-link collapsed" data-bs-target="#looks-nav" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-grid"></i><span>看板</span><i class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <ul id="looks-nav" class="nav-content collapse @(homeRoutes.Contains(activeController) ? "show" : "")" data-bs-parent="#sidebar-nav">
+                    <li>
+                        <a class="nav-link @(activeController == "Home" ? "active" : "")"
+                           asp-action="Index" asp-controller="Home">
+                            统计分析
+                        </a>
+                    </li>
+                </ul>
+            </li>
+
+            <li class="nav-item @(projectRoutes.Contains(activeController) ? "active" : "")">
+                <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-menu-button-wide"></i><span>项目</span><i class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <ul id="forms-nav" class="nav-content collapse @(projectRoutes.Contains(activeController) ? "show" : "")" data-bs-parent="#sidebar-nav">
+                    <li>
+                        <a class="nav-link @(activeController == "Project" ? "active" : "")"
+                           asp-action="Index" asp-controller="Project">
+                            项目管理
+                        </a>
+                    </li>
+                </ul>
+            </li>
             <li class="nav-item @(userRoutes.Contains(activeController) ? "active" : "")">
                 <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-card-list"></i><span>用户</span><i class="bi bi-chevron-down ms-auto"></i>
@@ -200,22 +228,9 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav-item @(projectRoutes.Contains(activeController) ? "active" : "")">
-                <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-menu-button-wide"></i><span>项目</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="forms-nav" class="nav-content collapse @(projectRoutes.Contains(activeController) ? "show" : "")" data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a class="nav-link @(activeController == "Project" ? "active" : "")"
-                           asp-action="Index" asp-controller="Project">
-                            项目管理
-                        </a>
-                    </li>
-                </ul>
-            </li>
             <li class="nav-item @(otherRoutes.Contains(activeController) ? "active" : "")">
                 <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-menu-button-wide"></i><span>其他</span><i class="bi bi-chevron-down ms-auto"></i>
+                    <i class="bi bi-journal-text"></i><span>其他</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="tables-nav" class="nav-content collapse @(otherRoutes.Contains(activeController) ? "show" : "")" data-bs-parent="#sidebar-nav">
                     <li>
