--- a/ProjectManagementSystem/Views/Shared/_LookPartialView.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_LookPartialView.cshtml
@@ -1,30 +1,16 @@
 ﻿@using ProjectManagementSystem.Data
 @using ProjectManagementSystem.Models
 @using ProjectManagementSystem.ViewModels
+@model LookIndexViewModel
 <div class="container">
     <!-- Reports -->
     <div class="col-12">
         <div class="card">
-
-            <div class="filter">
-                <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                    <li class="dropdown-header text-start">
-                        <h6>Filter</h6>
-                    </li>
-
-                    <li><a class="dropdown-item" id="filter-today" href="#">Today</a></li>
-                    <li><a class="dropdown-item" id="filter-this-month" href="#">This Month</a></li>
-                    <li><a class="dropdown-item" id="filter-this-year" href="#">This Year</a></li>
-
-                </ul>
-            </div>
-
             <div class="card-body">
-                <h5 class="card-title">任务状态情况</h5>
+                <h5 class="card-title">任务趋势图</h5>
 
                 <!-- Line Chart -->
-                <div id="chart"></div>
+                <div id="areachart"></div>
                 <!-- End Line Chart -->
 
             </div>
@@ -33,145 +19,383 @@
     </div>
     <!-- End Reports -->
 
-    <div class="col-lg-6">
+    <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Column Chart</h5>
+                <h5 class="card-title">任务每日状态图</h5>
+                <div class="col-3">
+                    <select id="user-select" class="form-control">
+                        @foreach (var name in Model.UserNames)
+                        {
+                            <option value="@name">@name</option>
+                        }
 
+                        <!-- 添加其他选项... -->
+                    </select>
+                </div>
+                <!-- User Select Dropdown -->
                 <!-- Column Chart -->
-                <div id="columnChart"></div>
+                <div id="stackChart"></div>
                 <!-- End Column Chart -->
 
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">成员贡献图</h5>
+
+                    <!-- Line Chart -->
+                    <div id="pieChart"></div>
+                    <!-- End Line Chart -->
+
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card">
+                <div class="card-body">
+                    <!-- Line Chart -->
+                    <div id="barChart"></div>
+                    <!-- End Line Chart -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-12">
+        <div class="card">
+
+            <div class="card-body">
+                <h5 class="card-title">资金变化图</h5>
+
+                <!-- Line Chart -->
+                <div id="fundChart"></div>
+                <!-- End Line Chart -->
+
+            </div>
+
+        </div>
+    </div>
 </div>
 
-@section Scripts{
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            new ApexCharts(document.querySelector("#columnChart"), {
-                series: [{
-                    name: 'Net Profit',
-                    data: [44, 55, 57, 56, 61, 58, 63, 60, 66]
-                }, {
-                    name: 'Revenue',
-                    data: [76, 85, 101, 98, 87, 105, 91, 114, 94]
-                }, {
-                    name: 'Free Cash Flow',
-                    data: [35, 41, 36, 26, 45, 48, 52, 53, 41]
-                }],
-                chart: {
-                    type: 'bar',
-                    height: 350
+<script>
+    var projectId = @Model.ProjectId;
+</script>
+@*bar图*@
+<script>
+    var barChart;
+    $(document).ready(function () {
+        var options = {
+            series: [{
+                name: '数量',
+                data: []
+            }],
+            chart: {
+                type: 'bar',
+                height: 350
+            },
+            plotOptions: {
+                bar: {
+                    borderRadius: 4,
+                    borderRadiusApplication: 'end',
+                    horizontal: true,
+                }
+            },
+            dataLabels: {
+                enabled: false
+            },
+            xaxis: {
+                categories: []
+            },
+            tooltip: {
+                x: {
+                    show: true
                 },
-                plotOptions: {
-                    bar: {
-                        horizontal: false,
-                        columnWidth: '55%',
-                        endingShape: 'rounded'
-                    },
-                },
-                dataLabels: {
-                    enabled: false
-                },
-                stroke: {
-                    show: true,
-                    width: 2,
-                    colors: ['transparent']
-                },
-                xaxis: {
-                    categories: ['Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct'],
-                },
-                yaxis: {
-                    title: {
-                        text: '$ (thousands)'
-                    }
-                },
-                fill: {
-                    opacity: 1
-                },
-                tooltip: {
-                    y: {
-                        formatter: function (val) {
-                            return "$ " + val + " thousands"
-                        }
+                y: {
+                    formatter: function (value) {
+                        return value;
                     }
                 }
-            }).render();
-        });
-    </script>
-
-    <script>
-        var chart;  // 创建一个全局变量来保存当前的图表
-
-        $('#filter-today').click(function (e) {
-            e.preventDefault();
-            $.get('/Project/GetData?filter=Today', function (data) {
-                renderChart(data);
-            });
-        });
-
-        $('#filter-this-month').click(function (e) {
-            e.preventDefault();
-            $.get('/Project/GetData?filter=ThisMonth', function (data) {
-                renderChart(data);
-            });
-        });
-
-        $('#filter-this-year').click(function (e) {
-            e.preventDefault();
-            $.get('/Project/GetData?filter=ThisYear', function (data) {
-                renderChart(data);
-            });
-        });
-
-        function renderChart(data) {
-            if (chart) {
-                chart.destroy();  // 如果已经存在一个图表，先销毁它
             }
+        };
 
-            // 处理数据，使其满足 ApexCharts 的要求
-            var series = data.map(function (item) {
-                return {
-                    name: item.name,
-                    data: item.data.map(function (d) {
-                        return { x: d.x, y: d.y }
-                    }),
-                    color: item.color, // 颜色字段
-                };
-            });
+        $.get('/Project/GetBarData?projectId=' + projectId, function (data) {
+            options.series[0].data = data.numbers;
+            options.xaxis.categories = data.names;
+            if (barChart) {
+                barChart.destory();
+            }
+            barChart = new ApexCharts(document.querySelector("#barChart"), options);
+            barChart.render();
+        });
+    });
+</script>
 
-            var options = {
-                series: series,
-                chart: {
-                    height: 350,
-                    type: 'area'
-                },
-                dataLabels: {
-                    enabled: false
-                },
-                stroke: {
-                    curve: 'smooth'
-                },
-                xaxis: {
-                    type: 'datetime'
-                },
-                tooltip: {
-                    x: {
-                        format: 'dd/MM/yy HH:mm'
+
+@*饼图*@
+<script>
+    var pieChart;
+    $(document).ready(function () {
+        $.get('/Project/GetPieData?projectId=' + projectId, function (data) {
+            console.log('Data received from server:', data);
+            renderPieChart(data);
+        });
+    });
+
+    function renderPieChart(data) {
+        var options = {
+            series: data.numbers,
+            chart: {
+                type: 'pie',
+            },
+            labels: data.names,
+            responsive: [{
+                breakpoint: 480,
+                options: {
+                    chart: {
+                        width: 200
                     },
-                },
-            };
+                    legend: {
+                        position: 'bottom'
+                    }
+                }
+            }]
+        };
+        if (pieChart) {
+            pieChart.destroy();
+        }
+        pieChart = new ApexCharts(document.querySelector("#pieChart"), options);
+        pieChart.render();
+    }
+</script>
 
-            chart = new ApexCharts(document.querySelector("#chart"), options);
-            chart.render();
+@*资金变化图*@
+<script>
+    var fundChart;
+
+    function renderFundChart(data) {
+        if (fundChart) {
+            fundChart.destroy();
+        }
+        var options = {
+            series: data,
+            chart: {
+                type: 'line',
+                height: 350,
+                stacked: false
+            },
+            dataLabels: {
+                enabled: false
+            },
+            stroke: {
+                width: [1, 1, 4]
+            },
+            xaxis: {
+                type: 'datetime',
+                labels: {
+                    format: 'dd/MM/yy'
+                }
+            },
+            yaxis: [
+                {
+                    axisTicks: {
+                        show: true,
+                    },
+                    axisBorder: {
+                        show: true,
+                        color: '#008FFB'
+                    },
+                    tooltip: {
+                        enabled: true
+                    }
+                }
+            ],
+            tooltip: {
+                fixed: {
+                    enabled: true,
+                    position: 'topLeft', // topRight, topLeft, bottomRight, bottomLeft
+                    offsetY: 30,
+                    offsetX: 60
+                },
+            },
+            legend: {
+                horizontalAlign: 'left',
+                offsetX: 40
+            }
+        };
+
+        fundChart = new ApexCharts(document.querySelector("#fundChart"), options);
+        fundChart.render();
+    }
+
+    // 页面加载完成后，自动加载数据
+    $(document).ready(function () {
+        console.log('Document ready');
+        $.get('/Project/GetFundData?projecctId=' + projectId, function (data) {
+            console.log('Data received from server:', data);
+            renderFundChart(data);
+        });
+    });
+
+</script>
+
+@*每日任务状态图*@
+<script>
+    var stackChart;
+    function renderStackChart(data) {
+        console.log(stackChart);
+
+        if (stackChart) {
+            stackChart.destroy();
+        }
+        var options = {
+            series: data,
+            chart: {
+                type: 'bar',
+                height: 350,
+                stacked: true,
+                toolbar: {
+                    show: true
+                },
+                zoom: {
+                    enabled: true
+                }
+            },
+            responsive: [{
+                breakpoint: 480,
+                options: {
+                    legend: {
+                        position: 'bottom',
+                        offsetX: -10,
+                        offsetY: 0
+                    }
+                }
+            }],
+            plotOptions: {
+                bar: {
+                    horizontal: false,
+                    borderRadius: 10,
+                    borderRadiusApplication: 'end', // 'around', 'end'
+                    borderRadiusWhenStacked: 'last', // 'all', 'last'
+                    dataLabels: {
+                        total: {
+                            enabled: true,
+                            style: {
+                                fontSize: '13px',
+                                fontWeight: 900
+                            }
+                        }
+                    }
+                },
+            },
+            xaxis: {
+                type: 'datetime',
+                labels: {
+                    format: 'dd/MM/yy'
+                }
+            },
+            legend: {
+                position: 'right',
+                offsetY: 40
+            },
+            fill: {
+                opacity: 1
+            }
+        };
+
+        stackChart = new ApexCharts(document.querySelector("#stackChart"), options);
+        stackChart.render();
+    }
+
+    $('#user-select').change(function () {
+        console.log('Change event triggered');
+        var user = encodeURIComponent($(this).val());
+        $.get('/Project/GetStackColumnData?user=' + user + '&projectId=' + projectId, function (data) {
+            console.log('Data received from server:', data);
+            renderStackChart(data);
+        });
+    });
+
+    // 页面加载完成后，自动触发“All”的点击事件
+    $(document).ready(function () {
+        console.log('Document ready');
+        $('#user-select').trigger('change');
+    });
+
+</script>
+
+
+@*//area趋势图*@
+<script>
+    var areachart;  // 创建一个全局变量来保存当前的图表
+
+    function renderAreaChart(data) {
+        if (areachart) {
+            areachart.destroy();  // 如果已经存在一个图表，先销毁它
         }
 
-
-        // 页面加载完成后，自动触发“这个月”的点击事件
-        $(document).ready(function () {
-            $('#filter-this-month').trigger('click');
+        // 处理数据，使其满足 ApexCharts 的要求
+        var series = data.map(function (item) {
+            return {
+                name: item.name,
+                data: item.data.map(function (d) {
+                    return { x: d.x, y: d.y }
+                }),
+                color: item.color, // 颜色字段
+            };
         });
-    </script>
-                    }
+
+        var options = {
+            series: series,
+            chart: {
+                height: 350,
+                type: 'area',
+            },
+            fill: {
+                type: "gradient",
+                gradient: {
+                    shadeIntensity: 1,
+                    opacityFrom: 0.3,
+                    opacityTo: 0.4,
+                    stops: [0, 90, 100]
+                }
+            },
+            dataLabels: {
+                enabled: false
+            },
+            stroke: {
+                curve: 'smooth',
+                width: 2
+            },
+            xaxis: {
+                type: 'datetime'
+            },
+            tooltip: {
+                fixed: {
+                    enabled: true,
+                    position: 'topLeft', //topRight, topLeft, bottomRight, bottomLeft
+                    offsetY: 30,
+                    offsetX: 60
+                },
+                shared: true,
+                intersect: false,
+                x: {
+                    format: 'dd/MM/yy HH:mm'
+                },
+            },
+        };
+
+        areachart = new ApexCharts(document.querySelector("#areachart"), options);
+        areachart.render();
+    }
+
+    $(document).ready(function () {
+        $.get('/Project/GetData?projectId=' + projectId, function (data) {
+            renderAreaChart(data);
+        });
+    });
+</script>
