--- a/ProjectManagementSystem/Views/User/AddUser.cshtml
+++ b/ProjectManagementSystem/Views/User/AddUser.cshtml
@@ -88,6 +88,7 @@
                     <label asp-for="RoleName"></label>
                 </div>
                 <div class="row">
+                    <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="col">
                         <button type="submit" class="btn btn-primary form-control">提交</button>
                     </div>
