--- a/ProjectManagementSystem/Views/Account/Register.cshtml
+++ b/ProjectManagementSystem/Views/Account/Register.cshtml
@@ -75,6 +75,7 @@
                                             <input asp-for="UserName" type="text" name="username" class="form-control" id="yourUsername"
                                                    required="">
                                             <div class="invalid-feedback">请输入用户名！</div>
+                                            <span asp-validation-for="UserName" class="text-danger"></span>
                                         </div>
 
                                         <div class="col-12">
@@ -87,6 +88,7 @@
                                         <div class="col-12">
                                             <button class="btn btn-primary w-100" type="submit">注册账号</button>
                                         </div>
+                                        <div asp-validation-summary="All" class="text-danger"></div>
                                         <div class="col-12">
                                             <p class="small mb-0">已有账号? <a asp-action="Login">登录</a></p>
                                         </div>
